<resources>
    <string name="app_name">METROTRANS SACCO</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="info"> METROTRANS LIMITED\nP.O. Box 11670 - 00400 Nairobi\n+254-721-381-573\nsaccometrotrans@gmail.com</string>
    <string name="title_activity_summary">summary</string>
    <string name="title_activity_status">Payment Status</string>
    <string name="login_subtitle">Sign in to continue</string>
</resources>
